--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Base">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Base.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
         <activity android:name=".CategoryActivity">
+        </activity>
+        <activity
+            android:name=".ui.transaction.TransactionActivity"
+            android:label="@string/title_activity_transaction"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
