--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
     implementation "android.arch.lifecycle:extensions:1.0.0-beta2"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
