--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
-    implementation "android.arch.lifecycle:extensions:1.0.0-beta2"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
-    implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
+    implementation "android.arch.lifecycle:extensions:1.0.0-rc1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-rc1"
+    implementation "android.arch.persistence.room:runtime:1.0.0-rc1"
     implementation "android.arch.paging:runtime:1.0.0-alpha3"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
@@ -56,4 +56,8 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+
+    implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.1.3'
 }
