--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.akarbowy.spendingsapp"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -47,11 +47,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
-    implementation 'android.arch.lifecycle:extensions:1.0.0-rc1'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-rc1"
-    implementation 'android.arch.persistence.room:runtime:1.0.0-rc1'
-    implementation 'android.arch.paging:runtime:1.0.0-alpha3'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
+    implementation 'android.arch.lifecycle:extensions:1.0.0'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    implementation 'android.arch.paging:runtime:1.0.0-alpha4-1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
