[#5] Import data from external sources - Revolut

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="stateHidden">
         </activity>
+        <activity
+            android:name=".ui.importdata.ImportDataActivity"
+            android:label="@string/title_activity_import">
+        </activity>
     </application>
 
 </manifest>
