break importing into steps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         </activity>
         <activity
             android:name=".ui.importdata.ImportDataActivity"
-            android:label="@string/title_activity_import">
+            android:label="@string/title_activity_import"
+            android:theme="@style/Base.NoActionBar">
         </activity>
     </application>
 
