--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     implementation 'android.arch.paging:runtime:1.0.0-alpha4-1'
